kubernetes/main/minecraft.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      containers:
        - name: minecraft
          image: itzg/minecraft-server:latest
          ports:
            - containerPort: 25565
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft-service
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 25565
      targetPort: 25565
  selector:
    app: minecraft
